Fix gradient on safari (transparent defaults to black at zero alpha)

--- a/sass/content/_home.scss
+++ b/sass/content/_home.scss
@@ -86,7 +86,7 @@ body.home {
 			height: 24px;
 			width: 100%;
 			z-index: 10;
-			background-image: linear-gradient(to right, transparent, white 40%);
+			background-image: linear-gradient( to right, rgba( white, 0 ), white 40% );
 		}
 	}
 
